# yt-downloader-online-api

./: pyproject.toml
audio/: api.py  schemas.py
core/: api.py  settings.py  urls.py
video/: api.py  schemas.py
